# brainfck

./: .clang-format  README.md  meson.build
inc/: compiler_c.hpp  compiler_qbe.hpp  interpreter.hpp  lexer.hpp
src/: compiler_c.cpp  compiler_qbe.cpp  interpreter.cpp  lexer.cpp  main.cpp
